Fix nav z-index

--- a/components/layout/Navigation.module.scss
+++ b/components/layout/Navigation.module.scss
@@ -57,7 +57,7 @@ $pillSize: 2rem;
   top: 0;
   width: 100%;
   border-radius: 0 0 4px 4px;
-  z-index: 2;
+  z-index: 3;
 
   @include background;
 
